# totp

./: .flake8  .gitignore  AGENT.md  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: pytest_warnings.md
src/app/: __init__.py
src/totp_calculator/: __init__.py  main.py
tests/: test_app.py  test_integration.py  test_main.py
