[project]
name = "totp"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jfasoc", email = "7720125+jfasoc@users.noreply.github.com"},
]
dependencies = [
    "pyotp>=2.9.0",
    "pyperclip>=1.8.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
totp-calculator = "totp_calculator.main:main"

[tool.pdm]
distribution = true
package-dir = "src"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-fail-under=100"
filterwarnings = "error"

[tool.black]
line-length = 88

[tool.mypy]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "black>=25.9.0",
    "flake8>=7.3.0",
    "mypy>=1.18.2",
    "types-pyperclip>=1.8.2.2",
    "freezegun>=1.5.1",
    "flake8-builtins>=3.0.0",
    "flake8-bugbear>=24.12.12",
    "flake8-bandit>=4.1.1",
    "flake8-cognitive-complexity>=0.1.0",
    "flake8-annotations-complexity>=0.1.0",
    "flake8-comprehensions>=3.17.0",
    "flake8-annotations>=3.2.0",
    "pep8-naming>=0.15.1",
    "flake8-comments>=0.1.2",
    "flake8-fixme>=1.1.1",
    "flake8-docstrings>=1.7.0",
    "flake8-isort>=6.1.2",
    "flake8-pytest-style>=2.1.0",
    "wemake-python-styleguide>=1.4.0",
]
