[project]
name = "totp"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jfasoc", email = "7720125+jfasoc@users.noreply.github.com"},
]
dependencies = [
    "pyotp>=2.9.0",
    "pyperclip>=1.8.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true
package-dir = "src"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-fail-under=100"
filterwarnings = "error"

[tool.black]
line-length = 88

[tool.mypy]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "black>=25.9.0",
    "flake8>=7.3.0",
    "mypy>=1.18.2",
    "types-pyperclip>=1.8.2.2",
    "freezegun>=1.5.1",
    "flake8-docstrings>=1.7.0",
]
